# client-sdk

./: Cargo.toml  NOTICE.txt  README.md  build.rs
proto/: zero_art.proto
protos/: zero_art.proto
src/: art_system.rs  bounded_map.rs  builders.rs  core.rs  error.rs  errors.rs  frame.rs  group_context.rs  group_state.rs  invite.rs  invite_context.rs  lib.rs  main.rs  metadata.rs  models.rs  proof_system.rs  secrets_factory.rs  types.rs  utils.rs  validator.rs
src/contexts/: group.rs  invite.rs  mod.rs  tests.rs
src/core/: impls.rs  parts.rs  traits.rs  types.rs
src/core/impls/: mod.rs
src/core/impls/concurrent/: linear_keyed_validator.rs  linear_validator.rs  mod.rs
src/core/impls/concurrent/linear_keyed_validator/: merge_strategy.rs  mod.rs  tests.rs
src/core/impls/sequential/: mod.rs
src/group_context/: builder.rs  operations.rs  processing.rs  tests.rs  utils.rs
src/group_context/operations/: add_member.rs  key_update.rs  remove_member.rs
src/keyed_validator/: handlers.rs  merge_strategy.rs  mod.rs  proposals.rs  tests.rs
src/metadata/: error.rs  group.rs  user.rs
src/models/: errors.rs  frame.rs  group_info.rs  invite.rs  mod.rs  payload.rs  protected_payload.rs
src/trees/: asynchronous_ratchet_tree.rs  binary_tree.rs  merge_tree.rs  mod.rs
