[package]
name = "awesome-client-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
zk = { git = "ssh://git@github.com/zk-messenger/project-m.git" }
art = { git = "ssh://git@github.com/zk-messenger/project-m.git", branch = "art-dev" }
crypto = { git = "ssh://git@github.com/zk-messenger/project-m.git" }
cortado = { git = "ssh://git@github.com/zk-messenger/project-m.git" }
prost = "0.14.1"
prost-types = "0.14.1"
ark-std = "0.5.0"
rand = "0.9.2"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
hkdf = "0.12.4"
sha3 = "0.10.8"
ark-serialize = "0.5.0"
thiserror = "2.0.16"
aes-gcm = "0.10.3"
rand_core = "0.9.3"

[build-dependencies]
prost-build = "0.14.1"
