[package]
name = "awesome-client-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
zk = { git = "ssh://git@github.com/zk-messenger/project-m.git", branch = "art-dev" }
art = { git = "ssh://git@github.com/zk-messenger/project-m.git", branch = "art-dev" }
# art = { path = "../project-m/crates/art" }
crypto = { git = "ssh://git@github.com/zk-messenger/project-m.git", branch = "art-dev" }
cortado = { git = "ssh://git@github.com/zk-messenger/project-m.git", branch = "art-dev" }
bulletproofs = { version = "5.0.0", git="https://github.com/zk-messenger/bulletproofs"}
prost = "0.14.1"
prost-types = "0.14.1"
ark-std = "0.5.0"
rand = "0.9.2"
# ark-ec = "0.5.0"
# ark-ff = "0.5.0"
hkdf = "0.12.4"
sha3 = "0.10.8"
# ark-serialize = "0.5.0"
thiserror = "2.0.16"
aes-gcm = "0.10.3"
rand_core = "0.9.3"
zkp = { version = "0.10.0", git = "https://github.com/juja256/zkp", features = ["rangeproof", "rangeproof_batchable"]}
# ark-ed25519 = "0.5.0"
curve25519-dalek = "4.1.3"
static_assertions = "1.1.0"
chrono = "0.4.42"
indexmap = "2.11.1"
uuid = { version = "1.18.1", features = ["v4"] }

ark-ec = { version = "0.5.0", git = "https://github.com/arkworks-rs/algebra", rev = "7601bf9" }
ark-ff = { version = "0.5.0", git = "https://github.com/arkworks-rs/algebra", rev = "7601bf9" }
ark-serialize = { version = "0.5.0", git = "https://github.com/arkworks-rs/algebra", rev = "7601bf9" }
ark-ed25519 = { version = "0.5.0", git = "https://github.com/arkworks-rs/algebra", rev = "7601bf9" }

[patch.crates-io]
aead = { path = "./patches/aead-0.5.2-fixed" }

[build-dependencies]
prost-build = "0.14.1"
